# minimal-qml

./: .gitignore  CMakeLists.txt  README.md  TimeUpdater.cpp  TimeUpdater.h  build_and_run_for_pi.sh  main.cpp  main.qml  minimal-qml  minimal-qml.pro  minimal-qml.qrc  moc_TimeUpdater.cpp_parameters  moc_timeupdater.cpp_parameters  run.sh
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qt/deploy_qml_imports/: minimal_qml.cmake
.qt/qml_imports/: minimal-qml_build.cmake  minimal-qml_build.rsp  minimal-qml_conf.cmake  minimal-qml_conf.rsp
.qt/rcc/: minimal-qml.qrc
minimal-qml_autogen/: deps  moc_predefs.h
